209 jacoco does not work (#258)
Jacoco report has been fixed.